Fix overlapping FR text on template page (#528)
* moved selected text message to its own line so that french text does not overlap

--- a/app/assets/stylesheets/components/stick-at-top-when-scrolling.scss
+++ b/app/assets/stylesheets/components/stick-at-top-when-scrolling.scss
@@ -32,7 +32,13 @@ $sticky-padding: $gutter * 2 / 3;
     }
 
   }
-
+  .template-list-selected-counter {
+    position: relative;
+    top: 0px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    right: 0px;
+  }
 }
 
 .js-stick-at-top-when-scrolling {
